--- a/marketing/marketing.css
+++ b/marketing/marketing.css
@@ -1,12 +1,11 @@
 .menu{
-    background-color: gray;
-    width: 100%;
+    background-color: rgba(120, 115, 115, 0.634);
     height: 10vh;
 }
 .containertop{
     width: 100%;
     height: 20vh;
-    background-color: gray;
+    background-color: rgba(120, 115, 115, 0.634);
     margin-top: 10px;
 }
 .containerbutton{
@@ -18,7 +17,7 @@
     width: 33.33%;
 
     height: 60vh;
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
     
 
 }
@@ -26,19 +25,19 @@
     width: 33.33%;
 
     height: 60vh;
-    background-color: gray;
+    background-color: rgba(120, 115, 115, 0.634);
     margin-left: 10px;
     
 }
 .right{
     width: 33.33%;
     height: 60vh;
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
     margin-left: 10px;
 }
 .footer{
     width: 100%;
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
     margin-top: 10px;
     height: 10vh;
 }
