--- a/reality/realty.css
+++ b/reality/realty.css
@@ -1,5 +1,5 @@
 .menu{
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
     width: 100%;
     height: 10vh;
 }
@@ -7,7 +7,7 @@
     margin-top: 10px;
     width: 100%;
     height: 19vh;
-    background-color: gray;
+    background-color: rgba(120, 115, 115, 0.634);
 }
 .containerbutton{
     margin-top: 10px;
@@ -17,7 +17,7 @@
     margin-right: 10px;
     width: 20%;
     height: 41vh;
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
 }
 .conright{
     width: 80%;
@@ -25,7 +25,7 @@
 .top{
     width:100% ;
     height: 30vh;
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
 }
 .buttom{
     display: flex;
@@ -34,17 +34,17 @@
 .br{
     width: 50%;
     height: 10vh;
-    background: gray;
+    background:  rgba(120, 115, 115, 0.634);
 }
 .bl{
     margin-left: 10px;
     width: 50%;
     height: 10vh;
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
 }
 .footer{
     width: 100%;
-    background-color: gray;
+    background-color:  rgba(120, 115, 115, 0.634);
     margin-top: 10px;
     height: 10vh;
 }
